--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@storybook/addon-docs": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
     "@storybook/html": "^5.3.18",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "cssnano": "^4.1.10",
     "postcss-modules": "^2.0.0",
     "postcss-nested": "^4.2.1",
-    "postcss-nesting": "^7.0.1"
+    "postcss-nesting": "^7.0.1",
+    "storybook-addon-designs": "^5.2.1"
   },
-  "dependencies": {
-    "@storybook/addon-docs": "^5.3.19"
-  },
+  "dependencies": {},
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
