--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss-modules": "^2.0.0",
     "postcss-nested": "^4.2.1",
     "postcss-nesting": "^7.0.1",
-    "storybook-addon-designs": "^5.2.1"
+    "storybook-addon-designs": "^5.2.1",
+    "storybook-dark-mode": "^0.6.1"
   },
   "dependencies": {},
   "scripts": {
